about section, fixed padding-bottom alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ html {
 }
 
 body {
+  background-color: #fff;
+  padding: 3rem;
   box-sizing: border-box;
   font-family: "Lato", Arial, Helvetica, sans-serif;
   font-weight: 400;
@@ -125,7 +127,6 @@ body {
 
 .section-about__paragraph-1 {
   padding-top: 4.2rem;
-  padding-bottom: 15rem;
   letter-spacing: 0.1rem;
 }
 
@@ -142,7 +143,7 @@ body {
 .section-about__paragraph-1:after {
   content: "";
   display: block;
-  margin: -6rem 0rem 50rem 45rem;
+  margin: -6rem 0rem 40rem 45rem;
   width: 20%;
   padding-top: 6rem;
   border-bottom: 1px solid rgb(215, 215, 215);
